--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "webpack": "^1.14.0",
